// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toast Component matches snapshot when displaying 1`] = `
<DocumentFragment>
  <div
    class="fixed bottom-24 right-12 sm:right-24 z-50 animate-slide-in"
  >
    <div
      class="flex items-center p-4 rounded-lg shadow-lg max-w-md bg-blue-100 text-blue-800"
    >
      <svg
        aria-hidden="true"
        class="w-6 h-6 mr-2"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m11.25 11.25.041-.02a.75.75 0 0 1 1.063.852l-.708 2.836a.75.75 0 0 0 1.063.853l.041-.021M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9-3.75h.008v.008H12V8.25Z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <div
        class="flex-1"
      >
        <p
          class="text-sm"
        >
          Message
        </p>
      </div>
      <button
        aria-label="Close toast"
        class="ml-4 text-current hover:text-opacity-80"
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast matches snapshot when visible 1`] = `
<div>
  <div
    class="fixed bottom-24 right-12 sm:right-24 z-50 animate-slide-in"
  >
    <div
      class="flex items-center p-4 rounded-lg shadow-lg max-w-md bg-green-100 text-green-800"
    >
      <svg
        aria-hidden="true"
        class="w-6 h-6 mr-2"
        data-slot="icon"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
      <div
        class="flex-1"
      >
        <p
          class="text-sm"
        >
          Snapshot toast
        </p>
      </div>
      <button
        aria-label="Close toast"
        class="ml-4 text-current hover:text-opacity-80"
      >
        <svg
          aria-hidden="true"
          class="w-4 h-4"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
